--- a/week3/package.json
+++ b/week3/package.json
@@ -4,6 +4,7 @@
   "description": "The purpose of this lab is to familiarize yourself with asynchronous programming in JavaScript, as well as using modules from the Node.js Package Manager",
   "main": "app.js",
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Jose Lara 10416385",
