--- a/week7/package.json
+++ b/week7/package.json
@@ -4,12 +4,14 @@
   "description": "For this lab, we are going to make more parts of the database for a social media website for animals, as well as developing a simple API to interact with your application.",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Jose Lara 10416385",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4"
+    "body-parser": "^1.18.3",
+    "express": "^4.16.4",
+    "mongodb": "^3.2.2"
   }
 }
