--- a/week7/package.json
+++ b/week7/package.json
@@ -4,7 +4,7 @@
   "description": "For this lab, we are going to make more parts of the database for a social media website for animals, as well as developing a simple API to interact with your application.",
   "main": "index.js",
   "scripts": {
-    "start": "node app.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Jose Lara 10416385",
