--- a/week8/package.json
+++ b/week8/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "week8",
+  "name": "cs-546-lab-8",
   "version": "1.0.0",
   "description": "This is to practice handlebars templates",
   "main": "app.js",
@@ -7,12 +7,13 @@
     "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "cs-546-lab-8",
+  "author": "Jose Lara 10416385",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
-    "handlebars": "^4.1.1",
-    "mongodb": "^3.2.2"
+    "express-handlebars": "^3.0.2",
+    "handlebars": "^4.1.1"
   }
 }
