--- a/week10/package.json
+++ b/week10/package.json
@@ -4,6 +4,7 @@
   "description": "Authentication and middleware",
   "main": "index.js",
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Jose Lara 10416385",
@@ -14,6 +15,7 @@
     "cookie-parser": "^1.4.4",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.2",
+    "express-session": "^1.16.1",
     "handlebars": "^4.1.2"
   }
 }
